# CG

./: .gitignore  README.md
init/src/: CMakeLists.txt  main.cpp
rasterization1/src/: CMakeLists.txt  main.cpp
rasterization2/src/: CMakeLists.txt  main.cpp  rasterizer.cpp
test/src/: CMakeLists.txt  main.cpp
